<?xml version="1.0"?>
<package format="2">
  <name>raspimouse_msgs</name>
  <version>0.0.0</version>
  <description>ROS message definition for raspimouse</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

</package>
